--- a/app/src/main/res/layout/fragment3_layout.xml
+++ b/app/src/main/res/layout/fragment3_layout.xml
@@ -27,6 +27,7 @@
         android:layout_height="46dp"
         android:background="@drawable/background_button"
         android:text="Click Me"
+        android:inputType="textCapCharacters"
         android:textColor="#dcd9d9"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
