--- a/app/src/main/res/layout/fragment4_layout.xml
+++ b/app/src/main/res/layout/fragment4_layout.xml
@@ -1,14 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center">
+    android:gravity="center"
+    android:orientation="vertical">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Øvelse7"
-        android:textSize="30sp" />
+        android:id="@+id/textview7"
+        android:layout_width="283dp"
+        android:layout_height="63dp"
+        android:layout_marginTop="108dp"
+        android:gravity="center"
+        android:text="@string/exercise7title"
+        android:textSize="17sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:layout_width="401dp"
+        android:layout_height="339dp"
+        android:layout_marginTop="80dp"
+        android:divider="@drawable/empty_tall_divider"
+        android:orientation="vertical"
+        android:showDividers="middle"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textview7"
+        app:layout_constraintVertical_bias="0.05">
+
+        <Button
+            android:id="@+id/button71"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/background_button"
+            android:inputType="textCapCharacters"
+            android:text="Button"
+            android:textColor="#dcd9d9" />
+
+        <Button
+            android:id="@+id/button72"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/background_button"
+            android:inputType="textCapCharacters"
+
+            android:textColor="#dcd9d9" />
+
+        <Button
+            android:id="@+id/button73"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/background_button"
+            android:inputType="textCapCharacters"
+
+            android:textColor="#dcd9d9" />
 
 
-</LinearLayout>
+    </LinearLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
