--- a/app/src/main/res/layout/fragment4_layout.xml
+++ b/app/src/main/res/layout/fragment4_layout.xml
@@ -32,6 +32,13 @@
         app:layout_constraintTop_toBottomOf="@+id/textview7"
         app:layout_constraintVertical_bias="0.05">
 
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:gravity="center"
+            android:textSize="18sp" />
+
         <Button
             android:id="@+id/button71"
             android:layout_width="match_parent"
